- improves the management ui styles

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,9 +34,19 @@
         "duplicate": "Duplicate"
       },
       "editor": {
+        "locked": "This crafting system is bundled with Fabricate and cannot be modified",
         "enabled": {
           "label": "Enabled",
           "description": "Components in a disabled system function as normal, but its recipes cannot be crafted and alchemy cannot be performed."
+        },
+        "name": {
+          "label":  "Name"
+        },
+        "summary": {
+          "label":  "Summary"
+        },
+        "description": {
+          "label":  "Description"
         }
       },
       "deleteSystemConfirm": {
