- base implementation for essence manager app

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -54,6 +54,21 @@
       "deleteSystemConfirm": {
         "content": "Delete {systemName}? This action cannot be undone.",
         "title": "Fabricate | Delete crafting system"
+      },
+      "tabs": {
+        "essences": {
+          "description": "Essences are a quality of a component. They define something that the component has, not something that it is. Components might have multiple Essences in different quantities, all of which you can define for your system. Not every crafting system needs essences. However, if you do want to add them to components, you'll need to define them here first.",
+          "create": "Add a new Essence",
+          "tableHeadings": {
+            "preview": "Preview",
+            "name": "Name",
+            "description": "Description"
+          },
+          "buttons": {
+            "edit": "Edit essence",
+            "delete": "Delete essence"
+          }
+        }
       }
     },
     "ui": {
