--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,17 +13,31 @@
     },
     "RecipeManagerApp": {
       "title": "Fabricate | Recipe",
+      "summary": {
+        "title": "Summary"
+      },
       "essences": {
         "title": "Essences",
-        "instructions": "The recipe requires these essences in addition to any named ingredients and catalysts. Left click on an essence to increase the required amount. Shift click while doing so to decrease it."
+        "instructions": "The recipe requires these essences in addition to any named ingredients and catalysts. Left click on an essence to increase the required amount. Shift click while doing so to decrease it.",
+        "notAvailable": "This crafting system has no Essences specified."
       },
       "ingredients": {
         "title": "Ingredients",
-        "instructions": "The recipe requires these ingredients in addition to any essences and catalysts. A recipe can have more than one combination of ingredients to choose from. Left click on a component to increase the required number in each option. Shift click while doing so to decrease it. Drop an item onto an empty ingredient combination option to create a new one."
+        "search": "Search ingredients",
+        "instructions": "The recipe requires these ingredients in addition to any essences and catalysts. A recipe can have more than one combination of ingredients to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number required in each option. Shift click while doing so to decrease it. ",
+        "addCombinationOption": "Drag and drop a component here to create a new option for Recipe ingredients. ",
+        "noneSet": "This Recipe has no named ingredients. "
       },
       "results": {
         "title": "Results",
-        "instructions": "The recipe produces these components when successfully crafted. A recipe can have more than one combination of results to choose from.\n            Left click on a component to increase the number produced in each option. Shift click while doing so to decrease it. Drop an item onto an empty result combination option to create a new one."
+        "instructions": "The recipe produces these components when successfully crafted. A recipe can have more than one combination of results to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number produced in each option. Shift click while doing so to decrease it. ",
+        "addCombinationOption": "Drag and drop a component here to create a new option for the Recipe results. ",
+        "noneSet": "This Recipe has no results. You might want to add some. "
+      },
+      "catalysts": {
+        "title": "Catalysts",
+        "instructions": "The recipe requires these catalysts to be present in order to be crafted. Catalysts are not consumed by crafting.",
+        "add": "Drag and drop a component here to make it a catalyst. You can also left click existing catalysts to increase the required quantity, or shift click while doing so to decrease it."
       }
     },
     "EditEssenceDialog": {
