feat: Recipe creation
- summary page
- minor version bump

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -14,7 +14,8 @@
     "RecipeManagerApp": {
       "title": "Fabricate | Recipe",
       "summary": {
-        "title": "Summary"
+        "title": "Summary",
+        "instructions": "This Recipe has the following features. Use the left navigation menu to edit each aspect of the Recipe respectively. "
       },
       "essences": {
         "title": "Essences",
