--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,7 +1,46 @@
 {
   "fabricate": {
-    "EditComponentDialog": {
-      "title": "Fabricate | Component"
+    "ComponentManagerApp": {
+      "title": "Fabricate | Component",
+      "essences": {
+        "title": "Essences",
+        "instructions": "The component is imbued with these essences. Left click on an essence to increase its potency. Shift click while doing so to decrease it."
+      },
+      "salvage": {
+        "title": "Salvage",
+        "instructions": "These components will be reclaimed when the item is salvaged. Left click on a component to increase its salvage value. Shift click while doing so to decrease it."
+      }
+    },
+    "RecipeManagerApp": {
+      "title": "Fabricate | Recipe",
+      "summary": {
+        "title": "Summary",
+        "instructions": "This Recipe has the following features. Use the left navigation menu to edit each aspect of the Recipe respectively. "
+      },
+      "essences": {
+        "title": "Essences",
+        "instructions": "The recipe requires these essences in addition to any named ingredients and catalysts. Left click on an essence to increase the required amount. Shift click while doing so to decrease it.",
+        "notAvailable": "This crafting system has no Essences specified."
+      },
+      "search": "Search available components",
+      "ingredients": {
+        "title": "Ingredients",
+        "instructions": "The recipe requires these ingredients in addition to any essences and catalysts. A recipe can have more than one combination of ingredients to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number required in each option. Shift click while doing so to decrease it. ",
+        "addCombinationOption": "Drag and drop a component here to create a new option for Recipe ingredients. ",
+        "noneSet": "This Recipe has no named ingredients. "
+      },
+      "results": {
+        "title": "Results",
+        "instructions": "The recipe produces these components when successfully crafted. A recipe can have more than one combination of results to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number produced in each option. Shift click while doing so to decrease it. ",
+        "addCombinationOption": "Drag and drop a component here to create a new option for the Recipe results. ",
+        "noneSet": "This Recipe has no results. You might want to add some. "
+      },
+      "catalysts": {
+        "title": "Catalysts",
+        "instructions": "The recipe requires these catalysts to be present in order to be crafted. Catalysts are not consumed by crafting.",
+        "add": "Left click a component below to add it as a catalyst for this Recipe. You can left click existing catalysts to increase the required number, or shift click while doing so to decrease it. ",
+        "noneSet": "This recipe has no catalysts. "
+      }
     },
     "EditEssenceDialog": {
       "title": "Fabricate | Essence",
@@ -90,6 +129,9 @@
         "content": "{errorMessage}. \n You can reset Fabricate to resolve the error, but this will delete all except the bundled crafting systems!"
       },
       "tabs": {
+        "recipes": {
+          "optionTooltip": "{size} Components"
+        },
         "essences": {
           "description": "Essences are a quality of a component. They define something that the component has, not something that it is. Components might have multiple Essences in different quantities, all of which you can define for your system. Not every crafting system needs essences. However, if you do want to add them to components, you'll need to define them here first.",
           "create": "Add a new Essence",
