feat: #81 Fabricate item tab look and feel
- Resizes the tab
- Renders ingredients
- Includes an edit recipe button for GMs

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -6,6 +6,17 @@
       "system": "Crafting System",
       "essence": "Essence"
     },
+    "ItemSheetTab": {
+      "ingredients": {
+        "optionName": "Option",
+        "selectOption": "Select Ingredients"
+      },
+      "buttons": {
+        "edit": {
+          "tooltip": "Edit"
+        }
+      }
+    },
     "ComponentManagerApp": {
       "title": "Fabricate | Component",
       "essences": {
