feat: #81 Fabricate item tab look and feel
- Renders options for ingredients and results

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,8 +8,16 @@
     },
     "ItemSheetTab": {
       "ingredients": {
+        "header": "Ingredients",
         "optionName": "Option",
-        "selectOption": "Select Ingredients"
+        "selectOption": "Select Ingredients",
+        "noneSet": "No ingredients"
+      },
+      "results": {
+        "header": "Results",
+        "optionName": "Option",
+        "selectOption": "Select Results",
+        "noneSet": "No results"
       },
       "buttons": {
         "edit": {
