--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -6,6 +6,25 @@
       "system": "Crafting System",
       "essence": "Essence"
     },
+    "ItemSheetTab": {
+      "ingredients": {
+        "header": "Ingredients",
+        "optionName": "Option",
+        "selectOption": "Select Ingredients",
+        "noneSet": "No ingredients"
+      },
+      "results": {
+        "header": "Results",
+        "optionName": "Option",
+        "selectOption": "Select Results",
+        "noneSet": "No results"
+      },
+      "buttons": {
+        "edit": {
+          "tooltip": "Edit"
+        }
+      }
+    },
     "ComponentManagerApp": {
       "title": "Fabricate | Component",
       "essences": {
