feature: Start rebuilding crafting system manager app with svelte
- adds context to the CraftingSystemManager
- reimplements setting migration with user notifications

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -1,241 +1,22 @@
 {
   "fabricate": {
-    "partTypes": {
-      "recipe": "Recipe",
-      "component": "Crafting Component",
-      "system": "Crafting System",
-      "essence": "Essence"
-    },
-    "ItemSheetTab": {
-      "ingredients": {
-        "header": "Ingredients",
-        "optionName": "Option",
-        "selectOption": "Select Ingredients",
-        "noneSet": "No ingredients"
-      },
-      "results": {
-        "header": "Results",
-        "optionName": "Option",
-        "selectOption": "Select Results",
-        "noneSet": "No results"
-      },
-      "buttons": {
-        "edit": {
-          "tooltip": "Edit"
-        }
-      }
-    },
-    "ComponentManagerApp": {
-      "title": "Fabricate | Component",
-      "essences": {
-        "title": "Essences",
-        "instructions": "The component is imbued with these essences. Left click on an essence to increase its potency. Shift click while doing so to decrease it."
-      },
-      "salvage": {
-        "title": "Salvage",
-        "instructions": "These components will be reclaimed when the item is salvaged. Left click on a component to increase its salvage value. Shift click while doing so to decrease it."
-      }
-    },
-    "RecipeManagerApp": {
-      "title": "Fabricate | Recipe",
-      "summary": {
-        "title": "Summary",
-        "instructions": "This Recipe has the following features. Use the left navigation menu to edit each aspect of the Recipe respectively. "
-      },
-      "essences": {
-        "title": "Essences",
-        "instructions": "The recipe requires these essences in addition to any named ingredients and catalysts. Left click on an essence to increase the required amount. Shift click while doing so to decrease it.",
-        "notAvailable": "This crafting system has no Essences specified."
-      },
-      "search": "Search available components",
-      "ingredients": {
-        "title": "Ingredients",
-        "instructions": "The recipe requires these ingredients in addition to any essences and catalysts. A recipe can have more than one combination of ingredients to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number required in each option. Shift click while doing so to decrease it. ",
-        "addCombinationOption": "Drag and drop a component here to create a new option for Recipe ingredients. ",
-        "noneSet": "This Recipe has no named ingredients. "
-      },
-      "results": {
-        "title": "Results",
-        "instructions": "The recipe produces these components when successfully crafted. A recipe can have more than one combination of results to choose from. Drag and drop a component onto an empty result combination option to create a new one, or drop a component into an existing combination. Left click on a component to increase the number produced in each option. Shift click while doing so to decrease it. ",
-        "addCombinationOption": "Drag and drop a component here to create a new option for the Recipe results. ",
-        "noneSet": "This Recipe has no results. You might want to add some. "
-      },
-      "catalysts": {
-        "title": "Catalysts",
-        "instructions": "The recipe requires these catalysts to be present in order to be crafted. Catalysts are not consumed by crafting.",
-        "add": "Left click a component below to add it as a catalyst for this Recipe. You can left click existing catalysts to increase the required number, or shift click while doing so to decrease it. ",
-        "noneSet": "This recipe has no catalysts. "
-      }
-    },
-    "EditEssenceDialog": {
-      "title": "Fabricate | Essence",
-      "errors": {
-        "nameRequired": "You must provide an essence name"
-      },
-      "description": {
-        "label": "Description",
-        "placeholder": "A description of the nature of the essence"
-      },
-      "iconCode": {
-        "label": "FontAwesome icon",
-        "placeholder": "fa-solid fa-mortar-pestle"
-      },
-      "name": {
-        "label": "Name",
-        "placeholder": "The essence name"
-      },
-      "tooltip": {
-        "label": "Tooltip text",
-        "placeholder": "The tooltip text to display on the essence icon"
-      },
-      "submit": "Submit"
-    },
-    "EditCraftingSystemDetailDialog": {
-      "title": "Fabricate | Basic System Details",
-      "description": {
-        "label": "Description (optional)",
-        "placeholder": "A more detailed description of the lore and mechanics of your new crafting system"
-      },
-      "summary": {
-        "label": "Summary",
-        "placeholder": "A short summary of the new crafting system for the sidebar"
-      },
-      "name": {
-        "label": "Name",
-        "placeholder": "My new crafting system"
-      },
-      "author": {
-        "label": "Author",
-        "placeholder": "Your name"
-      },
-      "submit": "Submit",
-      "errors": {
-        "nameRequired": "You must provide a crafting system name",
-        "summaryRequired": "You must provide a summary of the crafting system",
-        "invalidSystemDefinition": "Fabricate attempted to create an invalid Crafting System. Check the console (F12) for more information"
-      }
-    },
-    "ImportCraftingSystemDialog": {
-      "title": "Fabricate | Import Crafting System",
-      "hintText": "the Crafting System with the same ID as the Crafting System in the uploaded document, or create a new one,",
-      "buttons": {
-        "no": {
-          "label": "Cancel"
-        },
-        "import": {
-          "label": "Import"
-        }
-      },
-      "errors": {
-        "noFileUploaded": "You must select a file to upload",
-        "couldNotParseFile": "Unable to parse JSON file."
-      },
-      "info": {
-        "success": "Successfully Imported the {systemName} Crafting System"
-      }
-    },
-    "CraftingSystemManagerApp": {
-      "title": "Fabricate | Crafting System Manager",
-      "sidebar": {
-        "create": "Create",
-        "import": "Import",
-        "search": "Find a System or Recipe"
-      },
-      "contextMenu": {
-        "export": "Export",
-        "delete": "Delete",
-        "duplicate": "Duplicate"
-      },
-      "editor": {
-        "locked": "This crafting system is bundled with Fabricate and cannot be modified",
-        "editDetails": "Edit",
-        "enabled": {
-          "label": "Enabled",
-          "description": "Components in a disabled system cannot be salvaged, the system's recipes cannot be crafted, and its alchemy cannot be performed."
-        },
-        "name": {
-          "label":  "Name"
-        },
-        "summary": {
-          "label":  "Summary"
-        },
-        "description": {
-          "label":  "Description",
-          "noValue": "This system doesn't have a detailed description yet."
-        }
-      },
-      "deleteSystemConfirm": {
-        "content": "Delete {systemName}? This action cannot be undone.",
-        "title": "Fabricate | Delete crafting system"
-      },
-      "noSystemSelected": "No crafting system selected. Create a new system or select one from the left menu.",
-      "readErrorPrompt": {
-        "title": "Error Reading Crafting Systems",
-        "content": "{errorMessage}. \n You can reset Fabricate to resolve the error, but this will delete all except the bundled crafting systems!"
-      },
-      "errors": {
-        "export": {
-          "systemNotFound": "The Crafting System with ID {systemId} could not be exported as it could not be found.",
-          "noIdProvided": "Cannot export Crafting System as no ID was provided. "
-        }
-      },
-      "info": {
-        "export": {
-          "success": "The Crafting System {systemName} was successfully exported to {fileName}."
-        }
-      },
-      "prompts": {
-        "itemReadError":{
-          "title": "Remove {type} {itemId}?",
-          "content": "The {type} with UUID {itemId} was referenced by a Fabricate Item, but does not exist. Deleting references to it will allow Fabricate to load. Proceed?"
-        },
-        "removeComponent": {
-          "title": "Remove {name}?",
-          "content": "The component will be removed from the Crafting System, as well as any Recipes and Components that reference it. This action cannot be undone. Are you sure?"
-        },
-        "removeEssence": {
-          "title": "Remove {name}?",
-          "content": "The essence will be removed from the Crafting System, as well as any Recipes and Components that reference it. This action cannot be undone. Are you sure?"
-        },
-        "removeRecipe": {
-          "title": "Remove {name}?",
-          "content": "The recipe will be removed from the Crafting System. This action cannot be undone. Are you sure?"
-        }
-      },
-      "tabs": {
-        "recipes": {
-          "title": "Recipes",
-          "optionTooltip": "{size} Components"
-        },
-        "essences": {
-          "title": "Essences",
-          "description": "Essences are a quality of a component. They define something that the component has, not something that it is. Components might have multiple Essences in different quantities, all of which you can define for your system. Not every crafting system needs essences. However, if you do want to add them to components, you'll need to define them here first.",
-          "create": "Add a new Essence",
-          "tableHeadings": {
-            "preview": "Preview",
-            "name": "Name",
-            "description": "Description"
-          },
-          "buttons": {
-            "edit": "Edit essence",
-            "delete": "Delete essence"
-          }
-        },
-        "alchemy": {
-          "title": "Alchemy"
-        },
-        "checks": {
-          "title": "Checks"
-        },
-        "components": {
-          "title": "Components"
-        }
-      }
-    },
     "ui": {
       "notifications": {
         "submissionError": {
           "prefix": "There were some problems with your form"
+        },
+        "settings": {
+          "migration": {
+            "started": "Fabricate is migrating your crafting system settings. Please do close your browser or shut down the game world. ",
+            "completed": "Fabricate has finished migrating your crafting system settings!"
+          },
+          "errors": {
+            "summary": "Fabricate was unable to read the setting for the key {settingKey}. Caused by:",
+            "noValue": "Expected a non-null, non-empty setting value.",
+            "noVersion": "Expected a non-null, non-empty setting version.",
+            "notFound": "No Setting was registered for the provided setting key.",
+            "migration": "Unable to migrate the setting for the key {settingKey}."
+          }
         }
       },
       "sidebar": {
